# DrawingWithGaussians

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  fit.py  fit_2d.py  fit_3d.py  pyproject.toml
configs/: diffusion_guidance.yaml  fit_to_image.yaml
drawingwithgaussians/: gaussian.py  losses.py  networks.py  rendering2d.py  sds_pipeline.py  utils.py
drawingwithgaussians/threed/: camera.py  losses.py
drawingwithgaussians/twod/: gaussian.py  losses.py  rendering.py  sds_pipeline.py
notebooks/: test.ipynb
